[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/error.gd" type="Script" id=1]

[node name="error" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PopupDialog" type="PopupDialog" parent="."]
margin_left = 270.0
margin_top = 161.0
margin_right = 565.0
margin_bottom = 324.0

[node name="Button" type="Button" parent="PopupDialog"]
margin_left = 4.0
margin_top = 123.0
margin_right = 292.0
margin_bottom = 160.0
text = "keluar"

[node name="Label" type="Label" parent="PopupDialog"]
margin_left = 11.0
margin_top = 12.0
margin_right = 282.0
margin_bottom = 121.0
text = "erro tidak diketahui"

[connection signal="about_to_show" from="PopupDialog" to="." method="_on_PopupDialog_about_to_show"]
[connection signal="visibility_changed" from="PopupDialog" to="." method="_on_PopupDialog_visibility_changed"]
[connection signal="pressed" from="PopupDialog/Button" to="." method="_on_Button_pressed"]
